[project]
name = "pion_power_api"
dynamic = ["version"]
description = "Async Python client library for the Pion Power HTTP REST API."
readme = "README.md"
requires-python = ">=3.11"
license-files = [ "LICENSE" ]
authors = [
  { name = "Eric Rosenquist" }
]
dependencies = [
  "httpx>=0.24.0"
]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent"
]

[project.urls]
"Source" = "https://github.com/rosenqui/pion_power_api"

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.22",
  "respx>=0.23.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "pion_power_api.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["test_data*"]
